Fixed image taller than wide being too big in ShowPost component.

--- a/src/assets/styles/ShowPost.module.scss
+++ b/src/assets/styles/ShowPost.module.scss
@@ -7,6 +7,7 @@ div.showPost {
     img.postPic {
         width: 1400px;
         max-width: 100%;
+        max-height: 1000px;
     }
 
     i.postIcon {
